Issue #28077: find_empty_slot() only supports combined dict